--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="hint_email">Hint</string>
+    <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="btn_login">Login</string>
 
     <string name="btn_forgot_password">Forgot your password?</string>
     <string name="btn_link_to_register">Not a member? Get registered in Secret Santa now!</string>
+    <string name="register">Register</string>
+    <string name="already_registered">Already registered. Login Me!</string>
+    <string name="hint_repeat_password">Repeat Password</string>
 </resources>
