--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="add_new_member">+ Add new member</string>
     <string name="Done">done</string>
     <string name="nickname">Nickname</string>
+    <string name="friend_s_nickname">Friend\'s nickname</string>
+    <string name="add">Add</string>
 </resources>
