--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,10 @@
     <string name="nickname">Nickname</string>
     <string name="friend_s_nickname">Friend\'s nickname</string>
     <string name="add">Add</string>
+    <string name="members_count_and_date_created">Members : %d\nCreated :\n %s</string>
+    <string name="my_groups">My Groups</string>
+    <string name="group_requests">Group Requests</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
