--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,6 @@
     <string name="my_groups">My Groups</string>
     <string name="group_requests">Group Requests</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel_confirmation">Cancel\nConfirmation</string>
 </resources>
