--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="input_what_you_want_for_christmas">Input what you want for Christmas</string>
     <string name="accept_leave">Do you want to leave this page with unsaved changes?</string>
     <string name="his_wishlist">%s\'s WishList</string>
+    <string name="trash">Trash</string>
 </resources>
