message about nogroups"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="his_wishlist">%s\'s WishList</string>
     <string name="trash">Trash</string>
     <string name="confirm_move_group_to_trash">Move %s to trash?</string>
+    <string name="quite_alone_here">quite alone here</string>
 </resources>
