--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="santaa">santaa</string>
     <string name="candy_round">candy_round</string>
     <string name="face">face</string>
+    <string name="delete_group">Do you want to delete %s?</string>
 </resources>
