--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="candy_round">candy_round</string>
     <string name="face">face</string>
     <string name="delete_group">Do you want to delete %s?</string>
+    <string name="new_groups_available">new group invitation appeared!</string>
 </resources>
